--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
 /* Global Layout Set-up */
-* { 
+* {
   box-sizing: border-box;
 }
-  
+
 body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #222;
   background: #f7f5f0;
+}
+/* Header Styles */
+h2 {
+    color: #34495e;
+    font-weight: 300;
+    font-size: 2.2em;
+    text-align: center;
 }
 /* Link Styles */
 
@@ -57,7 +64,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/gent.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -83,10 +90,10 @@ header .profile-image:hover {
   border-radius: 5px;
   display: table;
   margin: 10px auto;
-} 
+}
 .location {
   background-color: #222;
-  color: yellow;
+  color: #fff;
 }
 .card {
   margin: 30px;
@@ -99,7 +106,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #42b983;
 }
 
 ul.skills {
@@ -110,14 +117,14 @@ ul.skills {
 .skills li {
   border-radius: 6px;
   display: inline-block;
-  background: #ff9904;
+  background: #42b983;
   color: white;
   padding: 5px 10px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #0399ff;
+  background: #2c3e50;
 }
 
 footer {
@@ -129,6 +136,7 @@ footer {
 footer .copyright {
   top: -8px;
   font-size: .75em;
+  color: #2c3e50;
 }
 
 footer ul {
@@ -169,10 +177,10 @@ a.social:hover {
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
-  
+
   .flex {
       display: -ms-flexbox;      /* TWEENER - IE 10 */
-      display: flex; 
+      display: flex;
       max-width: 1200px;
       -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -204,4 +212,3 @@ a.social:hover {
   }
 
 }
-
