--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,12 @@ header .profile-image:hover {
   animation: swinging 1s ease-in-out forwards;
   filter: grayscale(0%);
 }
+main.flex {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
 @-webkit-keyframes swinging{
     0%{-webkit-transform: scale(1.1) rotate(10deg);border-color: #42b983;}
     50%{-webkit-transform: scale(1.2) rotate(-5deg);border-color: #34495e;}
@@ -143,6 +149,108 @@ header .profile-image:hover {
 }
 .card:hover {
   border-color: #42b983;
+}
+.polaroids-gallery {
+    padding-top: 20px;
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+}
+ul.polaroids {
+    list-style: none;
+    padding: 0;
+}
+ul.polaroids > li {
+    width: 25%;
+    padding: 0 0.625em 1.25em;
+}
+ul.polaroids a {
+    background: #fff;
+    display: inline;
+    float: left;
+    margin: 0 0 27px 30px;
+    width: auto;
+    padding: 10px 10px 15px;
+    text-align: center;
+    font-family: "Marker Felt",sans-serif;
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -webkit-transform: rotate(-2deg);
+    -webkit-transition: -webkit-transform .15s linear;
+    -moz-transform: rotate(-2deg);
+}
+ul.polaroids img {
+    display: block;
+    width: 190px;
+    margin-bottom: 12px;
+}
+ul.polaroids a:after {
+  content: attr(title);
+}
+/* By default, we tilt all our images -2 degrees */
+ul.polaroids a {
+  -webkit-transform: rotate(-2deg);
+  -moz-transform: rotate(-2deg);
+}
+
+/* Rotate all even images 2 degrees */
+ul.polaroids li:nth-child(even) a {
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(2deg);
+}
+
+/* Don't rotate every third image, but offset its position */
+ul.polaroids li:nth-child(3n) a {
+  -webkit-transform: none;
+  -moz-transform: none;
+  position: relative;
+  top: -5px;
+}
+
+/* Rotate every fifth image by 5 degrees and offset it */
+ul.polaroids li:nth-child(5n) a {
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  position: relative;
+  right: 5px;
+}
+
+/* Keep default rotate for every eighth, but offset it */
+ul.polaroids li:nth-child(8n) a {
+  position: relative;
+  top: 8px;
+  right: 5px;
+}
+
+/* Keep default rotate for every eleventh, but offset it */
+ul.polaroids li:nth-child(11n) a {
+  position: relative;
+  top: 3px;
+  left: -5px;
+}
+
+/* Add drop shadows and smooth out the transition (Safari only) */
+ul.polaroids a {
+  -webkit-transition: -webkit-transform .15s linear;
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+  -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+}
+
+/* On hover, darken the shadows a bit */
+ul.polaroids a {
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);
+  -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5);
+}
+
+
+ul.polaroids li a:hover {
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  position: relative;
+  z-index: 5;
 }
 
 ul.skills {
@@ -196,6 +304,7 @@ footer ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  clear: both;
 }
 
 footer ul li {
@@ -228,18 +337,21 @@ a.social:hover {
   clear: both;
 }
 
+
 /* Styles for larger screens */
 @media screen and (min-width: 980px) {
 
   .flex {
-      display: -ms-flexbox;      /* TWEENER - IE 10 */
+      display: -ms-flexbox;
       display: flex;
       max-width: 1200px;
       -ms-flex-pack: distribute;
       justify-content: space-around;
       margin: 0 auto;
   }
-
+  .polaroids {
+      flex-flow: row wrap;
+  }
   header {
     min-height: 470px;
   }
@@ -257,7 +369,9 @@ a.social:hover {
   main p {
     line-height: 1.6em;
   }
-
+  main.flex {
+      flex-flow: row;
+  }
   footer {
     font-size: 1.3em;
     max-width: 1200px;
