--- a/styles.css
+++ b/styles.css
@@ -97,9 +97,7 @@ header .profile-image {
   position: relative;
 }
 header .profile-image:hover {
-  -webkit-transform-origin: 50% 0;
   transform-origin: 50% 0;
-  -webkit-animation: swinging &1 ease-in-out forwards;
   animation: swinging 1s ease-in-out forwards;
   filter: grayscale(0%);
 }
@@ -108,14 +106,6 @@ main.flex {
     flex-flow: column;
     align-items: center;
 }
-
-@-webkit-keyframes swinging{
-    0%{-webkit-transform: scale(1.1) rotate(10deg);border-color: #42b983;}
-    50%{-webkit-transform: scale(1.2) rotate(-5deg);border-color: #34495e;}
-    75%{-webkit-transform: scale(1.1) rotate(10deg);border-color: #34495e;}
-    100%{border-color: #42b983;}
-}
-
 @keyframes swinging{
     0%{transform: scale(1.1) rotate(10deg);border-color: #42b983;}
     50%{transform: scale(1.2) rotate(-5deg);border-color: #34495e;}
@@ -328,7 +318,7 @@ ul.hobbies {
   border-radius: 2em;
   border: 2px solid #42b983;
   display: block;
-  background: transparant;
+  background: transparent;
   color: #7f8c8d;
   padding: 5px 10px;
   margin: 10px;
